Add support for all legacy jboss server types
Signed-off-by: Rob Stryker <rob@oxbeef.net>